@startuml

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "server" as server {
	servername: character varying primary key
}

entity "incidencia" as incidencia {
	id: bigint default nextval('seqId') primary key
	---
	prioridad: character varying not null
	timestamp_creacion: timestamp not null default now()
	descripcion: text not null
	server: character varying references server(servername)
	estado: character varying CHECK (estado='Pendiente' or estado = 'En desarrollo' or estado = 'Resuelta')
}
server |o..o{ incidencia

entity "estado_incidencia" as estado_incidencia{
	id_incidencia: bigint references incidencia(id)
	estado: character varying references incidencia(estado)
	timestamp_estado: timestamp not null default now()
}
incidencia ||..|{ estado_incidencia

entity "usuario" as usuario {
	id: serial default nextval('seqId') primary key
	nif: character varying
	usuario: character varying
	email: character varying
	clave: character varying
}
incidencia ||..|| usuario
@enduml
